--- a/docs/slides/style.css
+++ b/docs/slides/style.css
@@ -1,8 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Reenie+Beanie);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
-@import url(https://fonts.googleapis.com/css?family=Impact);
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700);
+
 
 body { font-family: 'Roboto Slab', 'Droid Serif', 'Palatino Linotype', 'Book Antiqua', Palatino, 'Microsoft YaHei', 'Songti SC', serif; }
 
@@ -32,9 +32,9 @@ body { font-family: 'Roboto Slab', 'Droid Serif', 'Palatino Linotype', 'Book Ant
 }
 
 .remark-slide-content h4 {
-  font-family: 'Impact';
+  font-family: 'Droid Serif';
   font-weight: normal;
-  font-size: 150px;
+  font-size: 120px;
   line-height: 1em;
 }
 
