--- a/docs/style-all.css
+++ b/docs/style-all.css
@@ -5,6 +5,11 @@ h1 {
   font-weight: normal;
 }
 
+h2 {
+  font-family: 'Reenie Beanie';
+  font-weight: normal;
+}
+
 .navbar {
   background-color:#A6C0C5;
 }
@@ -27,9 +32,15 @@ blockquote{
   font-size: 150%;
 }
 
-h2, h3, .navbar-nav {
+.navbar-nav {
   font-family: 'Roboto Slab';
   font-weight: normal;
+}
+
+h3 {
+  font-family: 'Roboto Slab';
+  font-weight: bold;
+  font-size: 100%;
 }
 
 h4 {
@@ -71,9 +82,20 @@ a:hover, a:focus {
   margin-top: 30px;
 }
 
-.list-group-item .active, .list-group-item .active:hover, .list-group-item .active:focus {
-  background-color:#A6C0C5;
-  border-color:#A6C0C5;
+
+element.style {
+    cursor: pointer;
+}
+.tocify .list-group-item {
+    border-radius: 0px;
+}
+.tocify .tocify-item a, .tocify .list-group-item {
+    padding: 5px;
+}
+
+.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
+  background-color:#C0C0C0;
+  border-color:#C0C0C0;
 }
 
 div .sourceCode{
@@ -96,4 +118,8 @@ img {
 .footnotes {
   border-top: 1px solid #A6C0C5;
   padding-top: 20px;
+}
+
+div .sourceCode {
+  margin-bottom: 5px;
 }
